bug bouton expand firefox et flow detecte les overflow

--- a/steambeat-web/src/main/webapp/static/css/core.css
+++ b/steambeat-web/src/main/webapp/static/css/core.css
@@ -89,13 +89,15 @@ a#feedback:hover {
 }
 
 .opinion {
+    display: block;
     position: relative;
     width: 100px;
-    padding: 10px;
-    margin: 15px;
+    padding: 20px;
+    margin: 10px;
     border: 1px solid #BBB;
     background-color: #FFFFFF;
     list-style-type: none;
+    overflow: hidden;
 }
 
 #newwebpage {
